--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App{
+  margin: 0 80px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navigation{
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  transition: .3s;
+}
+
+.navigation a{
+  text-decoration: none;
+  margin: 15px;
+  color: #9fa0a2;
+  font-size: 20px;
+}
+.navigation a:hover{
+  color: #d56b6b;
 }
